Project all most completed

--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -30,6 +30,13 @@
   border-radius: 10px;
 }
 
+.all_products {
+  position: absolute;
+  top: 31px;
+  left: 76%;
+  cursor: pointer;
+}
+
 .search_input {
   border: none;
   outline: none;
